--- a/lloss/test.ipynb
+++ b/lloss/test.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision import transforms\n",
     "import torchvision.transforms as T\n",
-    "\n",
+    "import timm\n",
     "from pathlib import Path\n",
     "\n",
     "\n",
@@ -355,19 +355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "out shape =  torch.Size([1, 18432])\n",
-      "tensor([[0.0475, 0.1764, 0.0296, 0.0270]], grad_fn=<AddmmBackward0>)\n",
-      "tensor([[-0.0040,  0.0128, -0.0513, -0.0288]], grad_fn=<AddmmBackward0>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
@@ -392,21 +382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'timm' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/ibyeong-gwon/Desktop/Git/DeepLearning/lloss/test.ipynb 셀 15\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/ibyeong-gwon/Desktop/Git/DeepLearning/lloss/test.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m model2 \u001b[39m=\u001b[39m timm\u001b[39m.\u001b[39mcreate_model(\u001b[39m'\u001b[39m\u001b[39mresnet50\u001b[39m\u001b[39m'\u001b[39m, num_classes \u001b[39m=\u001b[39m \u001b[39m4\u001b[39m, pretrained\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/ibyeong-gwon/Desktop/Git/DeepLearning/lloss/test.ipynb#X20sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m model2\u001b[39m.\u001b[39mforward_features(img)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'timm' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model2 = timm.create_model('resnet50', num_classes = 4, pretrained=True)\n",
     "model2.forward_features(img)"
