learning loss coding

--- a/lloss/main.ipynb
+++ b/lloss/main.ipynb
@@ -6,19 +6,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ibyeong-gwon/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " labeled_set = [2265, 733, 543, 2419, 1253, 174, 2091, 1349, 1042, 910, 614, 1381, 273, 839, 888, 1998, 1564, 297, 454, 162, 902, 105, 2341, 357, 73, 1873, 1912, 1324, 2415, 954, 1924, 2581, 1146, 1480, 738, 1898, 1879, 2174, 1442, 1950, 293, 475, 1190, 53, 1090, 1047, 334, 1801, 594, 701]\n",
       "2675\n",
-      "50\n",
+      "12\n",
       ">> Train a Model.\n"
      ]
     },
@@ -26,17 +19,35 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/200 [00:00<?, ?it/s]"
+      "100%|██████████| 1/1 [11:31<00:00, 691.01s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.4440, -0.1902,  0.1322,  1.4428],\n",
-      "        [-0.1860, -0.6902,  0.4508,  1.2882],\n",
-      "        [-0.4072, -0.2547,  0.3858,  1.1065],\n",
-      "        [-0.6223, -0.6451,  0.3800,  1.2436]], grad_fn=<AddmmBackward0>)\n"
+      "[('/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220323-AT6T35EA-S015_inpaint_1 ADR_W1.0_H1.0_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/bz/train/220512-AT6T31EH-S019_inpaint_1 ADR_W1.8_H1.8_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/yd/train/220302-AT6T31E1-S015_inpaint_1 ADR_W2.9_H3.2_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220215-AT6T31E1-F128_inpaint_2 ADR_W1.3_H1.0_FS.jpg'), ('/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220314-AT6T31EH-D621_inpaint_2 ADR_W0.9_H0.8_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220324-AT6T31EH-D619_inpaint_2 ADR_W1.4_H1.0_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220221-AT6T31E1-F152_inpaint_5 ADR_W2.4_H2.6_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/bz/train/220414-AT6T31EH-M244_inpaint_1 ADR_W1.1_H0.9_BS.jpg'), ('/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220318-AT6T31EH-M221_inpaint_1 ADR_W1.8_H1.5_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/bz/train/220228-AT6T31EH-R435_inpaint_1 ADR_W2.5_H2.6_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220319-AT6T31HW-S010_inpaint_1 ADR_W2.6_H2.3_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220331-AT6T31HW-S008_inpaint_1 ADR_W1.0_H1.0_FS.jpg'), ('/Users/ibyeong-gwon/Desktop/custom_data/chem/train/220425-AH6T50EF-R439_inpaint_1 ADR_W0.0_H0.0_None.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220307-AT6T31HW-S008_inpaint_1 ADR_W1.5_H1.5_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220221-AT6T31EH-M230_inpaint_1 ADR_W1.2_H1.2_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220215-AT6T31EH-S018_inpaint_1 ADR_W1.1_H1.1_FS.jpg'), ('/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220215-AT6T31EH-S029_inpaint_1 ADR_W1.1_H1.0_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220324-AT6T35EA-M216_inpaint_2 ADR_W1.1_H1.0_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220325-AT6T31EH-S023_inpaint_1 ADR_W1.5_H1.3_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/chem/train/220413-AT6T31E1-S023_inpaint_2 ADR_W2.7_H2.8_FS.jpg'), ('/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220412-AT6T31EH-M225_inpaint_1 ADR_W1.3_H1.5_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/chem/train/220117-AT6T31E1-M221_inpaint_1 ADR_W2.0_H2.0_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/bz/train/220415-AT6T31EH-R408_inpaint_1 ADR_W1.0_H0.9_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220117-AT6T31E1-R415_inpaint_1 ADR_W1.5_H1.5_FS.jpg'), ('/Users/ibyeong-gwon/Desktop/custom_data/yd/train/220219-AT6T31HW-S012_inpaint_1 ADR_W2.0_H1.7_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220323-AT6T35EA-M247_inpaint_5 ADR_W1.7_H1.2_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220121-AT6T31EH-S054_inpaint_1 ADR_W1.5_H1.5_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220215-AT6T31EH-S015_inpaint_4 ADR_W1.0_H1.1_FS.jpg'), ('/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220223-AT6T31E1-K540_inpaint_1 ADR_W2.0_H2.0_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220117-AT6T31EH-S026_inpaint_1 ADR_W1.0_H1.1_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/yd/train/220104-AT6T31EH-F113_inpaint_1 ADR_W2.0_H1.6_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/bz/train/220203-AT6T31E1-F122_inpaint_1 ADR_W0.6_H0.6_BS.jpg'), ('/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220425-AT6T31EH-S014_inpaint_1 ADR_W2.0_H1.6_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220307-AT6T31EH-S037_inpaint_1 ADR_W1.7_H2.0_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220509-AT6T31E1-M201_inpaint_1 ADR_W2.0_H2.0_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/yd/train/220404-AT6T31E1-K511_inpaint_1 ADR_W2.0_H2.0_FS.jpg'), ('/Users/ibyeong-gwon/Desktop/custom_data/bz/train/211209-AT6T31E1-R420_inpaint_1 ADR_W0.7_H1.0_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220215-AT6T31EH-S027_inpaint_2 ADR_W0.9_H0.8_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220303-AT6T31HW-S035_inpaint_1 ADR_W1.5_H1.3_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/bz/train/220503-AT6T31EH-K533_inpaint_2 ADR_W1.7_H1.4_BS.jpg'), ('/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220314-AT6T35EA-M246_inpaint_1 ADR_W0.7_H0.8_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/bz/train/211217-AT6T31EH-M223_inpaint_1 ADR_W1.3_H1.3_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220301-AH6T50EF-K506_inpaint_1 ADR_W0.3_H0.3_FS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220228-AT6T31EH-S014_inpaint_3 ADR_W1.7_H1.3_BS.jpg'), ('/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220323-AT6T35EA-S014_inpaint_1 ADR_W0.7_H0.8_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/211218-AT6T31E1-S043_inpaint_1 ADR_W1.0_H1.1_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220208-AT6T35EA-M208_inpaint_1 ADR_W1.3_H1.1_BS.jpg', '/Users/ibyeong-gwon/Desktop/custom_data/hz/train/220114-AT6T31HW-M211_inpaint_1 ADR_W1.3_H1.3_FS.jpg')]\n",
+      "12\n",
+      ">> Finished.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/km/s7fx7g3j0kv6t0v6mw7hbb0r0000gn/T/ipykernel_21814/2431109251.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    271\u001b[0m             \u001b[0;31m# Training and test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    272\u001b[0m             \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mschedulers\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataloaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEPOCH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mEPOCHL\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 273\u001b[0;31m             \u001b[0mmetrics\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataloaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'test'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    274\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"accuracy : {metrics['accuracy']:.4f}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    275\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"f1 score : {metrics['f1_score']:.4f}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/km/s7fx7g3j0kv6t0v6mw7hbb0r0000gn/T/ipykernel_21814/2431109251.py\u001b[0m in \u001b[0;36mtest\u001b[0;34m(models, dataloaders, mode)\u001b[0m\n\u001b[1;32m    139\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    140\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 141\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdataloaders\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    142\u001b[0m             \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m             \u001b[0mlabel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
      ]
     }
    ],
@@ -132,15 +143,19 @@
     "    models['backbone'].train()\n",
     "    models['module'].train()\n",
     "    global iters\n",
-    "\n",
+    "    labeled_img = []\n",
+    "    \n",
     "    for data in tqdm(dataloaders['train'], leave=False, total=len(dataloaders['train'])):\n",
     "        inputs = data[0].to(device)\n",
     "        labels = data[1].to(device)\n",
+    "        labeled_img.append(data[2])\n",
+    "        \n",
     "        iters += 1\n",
     "\n",
     "        optimizers['backbone'].zero_grad()\n",
     "        optimizers['module'].zero_grad()\n",
     "\n",
+    "        \n",
     "        scores, features = models['backbone'](inputs)\n",
     "        target_loss = criterion(scores, labels)\n",
     "        \n",
@@ -164,7 +179,10 @@
     "        loss.backward()\n",
     "        optimizers['backbone'].step()\n",
     "        optimizers['module'].step()\n",
-    "\n",
+    "        \n",
+    "    print(labeled_img)\n",
+    "    print(len(labeled_img))\n",
+    "    \n",
     "def test(models, dataloaders, mode='val'):\n",
     "    metrics = {}\n",
     "    preds, labels = [], []\n",
@@ -258,15 +276,28 @@
     "        random.shuffle(indices)\n",
     "        labeled_set = indices[:ADDENDUM]\n",
     "        unlabeled_set = indices[ADDENDUM:]\n",
+    "        \n",
+    "        print(f\" labeled_set = {labeled_set}\")\n",
+    "        # print(f\" unlabeled_set = {unlabeled_set}\")\n",
+    "        \n",
     "        acc_list = []\n",
     "        \n",
     "        print(len(train_data))\n",
+    "        \n",
+    "        subset = SubsetRandomSampler(labeled_set)\n",
+    "        \n",
+    "        # print(f\"subset = {subset}\")\n",
+    "        \n",
+    "        # lst = [train_data[i] for i in subset]\n",
+    "        # print(f\"lst = {lst}\")\n",
+    "        \n",
     "        train_loader = DataLoader(train_data, batch_size=BATCH, \n",
-    "                                  sampler=SubsetRandomSampler(labeled_set), \n",
+    "                                  sampler=subset, \n",
     "                                  num_workers = 4, pin_memory=True,  drop_last = True)\n",
     "        test_loader  = DataLoader(test_data,num_workers = 4, batch_size=1)\n",
     "        dataloaders  = {'train': train_loader, 'test': test_loader}\n",
     "        \n",
+    "\n",
     "        print(len(dataloaders['train']))\n",
     "        # Model\n",
     "        resnet18    = resnet.ResNet50().to(device)\n",
@@ -315,7 +346,7 @@
     "                                          num_workers = 4, pin_memory=True,  drop_last = True)\n",
     "\n",
     "            # Measure uncertainty of each data points in the subset\n",
-    "            uncertainty = get_uncertainty(models, unlabeled_loader)\n",
+    "            uncertainty = get_uncertainty(models, extractor, unlabeled_loader)\n",
     "\n",
     "            # Index in ascending order\n",
     "            arg = np.argsort(uncertainty)\n",
@@ -325,10 +356,15 @@
     "            unlabeled_set = list(torch.tensor(subset)[arg][:-ADDENDUM].numpy()) + unlabeled_set[SUBSET:]\n",
     "\n",
     "            # Create a new dataloader for the updated labeled dataset\n",
+    "            \n",
+    "            train_subset = SubsetRandomSampler(labeled_set)\n",
+    "            \n",
     "            dataloaders['train'] = DataLoader(train_data, batch_size=BATCH, \n",
-    "                                              sampler=SubsetRandomSampler(labeled_set), \n",
+    "                                              sampler=train_subset, \n",
     "                                              num_workers = 4, pin_memory=True,  drop_last = True)\n",
     "        \n",
+    "            print(f\"train_subset : {train_subset}\")\n",
+    "            \n",
     "        # Save a checkpoint\n",
     "        # torch.save({\n",
     "        #             'trial': trial + 1,\n",
@@ -341,7 +377,6 @@
     "        timing = datetime.timedelta(seconds = end - start)\n",
     "        \n",
     "        print(f\"working time = {timing}\")\n",
-    "        \n",
     "        print(f\" acc_list = {acc_list}\")\n",
     "        print(f\" f1_list = {f1_list}\")"
    ]
@@ -370,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
