--- a/lloss/test.ipynb
+++ b/lloss/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,18 @@
     "\n",
     "# Torchvison\n",
     "import torchvision.transforms as T\n",
-    "import torchvision.models as models"
+    "import torchvision.models as models\n",
+    "\n",
+    "import torch\n",
+    "from torchvision.models import resnet50\n",
+    "from torchvision.models.feature_extraction import get_graph_node_names\n",
+    "from torchvision.models.feature_extraction import create_feature_extractor\n",
+    "from torchvision.models import ResNet50_Weights"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,10 +71,87 @@
     "# Train Utils\n",
     "iters = 0\n",
     "\n",
-    "#\n",
-    "def train_epoch(models, criterion, optimizers, dataloaders, epoch, epoch_loss):\n",
-    "    models['backbone'].train()\n",
+    "\n",
+    "def get_uncertainty(models, extractor, unlabeled_loader):\n",
+    "    models['backbone'].eval()\n",
+    "    models['module'].eval()\n",
+    "    uncertainty = torch.tensor([]).to(device)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for (inputs, labels) in unlabeled_loader:\n",
+    "            inputs = inputs.to(device)\n",
+    "            # labels = labels.to(device)\n",
+    "\n",
+    "            scores = models['backbone'](inputs)\n",
+    "            \n",
+    "            features = extractor\n",
+    "            pred_loss = models['module'](features) # pred_loss = criterion(scores, labels) # ground truth loss\n",
+    "            pred_loss = pred_loss.view(pred_loss.size(0))\n",
+    "\n",
+    "            uncertainty = torch.cat((uncertainty, pred_loss), 0)\n",
     "    \n",
+    "    return uncertainty.cpu()\n",
+    "\n",
+    "\n",
+    "def test(models, extractor, dataloaders, mode='val'):\n",
+    "    metrics = {}\n",
+    "    preds, labels = [], []\n",
+    "    assert mode == 'val' or mode == 'test'\n",
+    "    models['backbone'].eval()\n",
+    "    models['module'].eval()\n",
+    "    \n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for (inputs, label) in dataloaders[mode]:\n",
+    "            inputs = inputs.to(device)\n",
+    "            label = label.to(device)\n",
+    "\n",
+    "            scores, _ = models['backbone'](inputs)\n",
+    "            # _, preds = torch.max(scores.data, 1)\n",
+    "            labels.extend(label.detach().tolist())\n",
+    "            preds.extend(scores.argmax(axis=1).detach().tolist())\n",
+    "        print(f\" labels = {labels}\")\n",
+    "        print(f\" preds = {preds}\")\n",
+    "        \n",
+    "    metrics['accuracy'] = accuracy_score(y_pred=preds, y_true=labels)\n",
+    "    metrics['f1_score'] = f1_score(y_pred=preds, y_true=labels, average='weighted')\n",
+    "    metrics['precision'] = precision_score(y_pred=preds, y_true=labels, average='weighted')\n",
+    "    metrics['recall'] = recall_score(y_pred=preds, y_true=labels, average='weighted')\n",
+    "\n",
+    "            # print(\"labels \" , labels)\n",
+    "            # print(\"preds \" , preds)\n",
+    "    return metrics\n",
+    "\n",
+    "#\n",
+    "def train(models, extractor, criterion, optimizers, schedulers, dataloaders, num_epochs, epoch_loss):\n",
+    "    print('>> Train a Model.')\n",
+    "    best_acc = 0.\n",
+    "    checkpoint_dir = os.path.join('./cifar10', 'train', 'weights')\n",
+    "    if not os.path.exists(checkpoint_dir):\n",
+    "        os.makedirs(checkpoint_dir)\n",
+    "    \n",
+    "    for epoch in tqdm(range(num_epochs)):\n",
+    "            \n",
+    "        train_epoch(models, extractor, criterion, optimizers, dataloaders, epoch, epoch_loss)\n",
+    "        schedulers['backbone'].step()\n",
+    "        schedulers['module'].step()\n",
+    "\n",
+    "        # Save a checkpoint\n",
+    "        if False and epoch % 5 == 4:\n",
+    "            acc = test(models, dataloaders, 'test')\n",
+    "            if best_acc < acc:\n",
+    "                best_acc = acc\n",
+    "                torch.save({\n",
+    "                    'epoch': epoch + 1,\n",
+    "                    'state_dict_backbone': models['backbone'].state_dict(),\n",
+    "                    'state_dict_module': models['module'].state_dict()\n",
+    "                },\n",
+    "                '%s/active_resnet18_cifar10.pth' % (checkpoint_dir))\n",
+    "            print('Val Acc: {:.3f} \\t Best Acc: {:.3f}'.format(acc, best_acc))\n",
+    "    print('>> Finished.')\n",
+    "    \n",
+    "def train_epoch(models, extractor, criterion, optimizers, dataloaders, epoch, epoch_loss):\n",
+    "    models['backbone'].train()\n",
     "    models['module'].train()\n",
     "    global iters\n",
     "\n",
@@ -80,9 +163,15 @@
     "        optimizers['backbone'].zero_grad()\n",
     "        optimizers['module'].zero_grad()\n",
     "\n",
-    "        scores, features = models['backbone'](inputs)\n",
+    "        scores = models['backbone'](inputs)\n",
     "        target_loss = criterion(scores, labels)\n",
     "        \n",
+    "        features_dic = extractor(inputs)\n",
+    "        features = [features_dic['layer1'], features_dic['layer2'], features_dic['layer3'], features_dic['layer4']]\n",
+    "        \n",
+    "        # print(f\" feature_length = {len(features)}\")\n",
+    "        \n",
+    "        # print(features)\n",
     "        \n",
     "        if epoch > epoch_loss:\n",
     "            # After 120 epochs, stop the gradient from the loss prediction module propagated to the target model.\n",
@@ -103,88 +192,29 @@
     "        loss.backward()\n",
     "        optimizers['backbone'].step()\n",
     "        optimizers['module'].step()\n",
-    "\n",
-    "def test(models, dataloaders, mode='val'):\n",
-    "    metrics = {}\n",
-    "    preds, labels = [], []\n",
-    "    assert mode == 'val' or mode == 'test'\n",
-    "    models['backbone'].eval()\n",
-    "    models['module'].eval()\n",
-    "    \n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        for (inputs, label) in dataloaders[mode]:\n",
-    "            inputs = inputs.to(device)\n",
-    "            label = label.to(device)\n",
-    "\n",
-    "            scores, _ = models['backbone'](inputs)\n",
-    "            # _, preds = torch.max(scores.data, 1)\n",
-    "            labels.extend(label.detach().tolist())\n",
-    "            preds.extend(scores.argmax(axis=1).detach().tolist())\n",
-    "        print(f\" labels = {labels}\")\n",
-    "        print(f\" preds = {preds}\")\n",
-    "    metrics['accuracy'] = accuracy_score(y_pred=preds, y_true=labels)\n",
-    "    metrics['f1_score'] = f1_score(y_pred=preds, y_true=labels, average='weighted')\n",
-    "    metrics['precision'] = precision_score(y_pred=preds, y_true=labels, average='weighted')\n",
-    "    metrics['recall'] = recall_score(y_pred=preds, y_true=labels, average='weighted')\n",
-    "\n",
-    "            # print(\"labels \" , labels)\n",
-    "            # print(\"preds \" , preds)\n",
-    "    return metrics\n",
-    "\n",
-    "#\n",
-    "def train(models, criterion, optimizers, schedulers, dataloaders, num_epochs, epoch_loss):\n",
-    "    print('>> Train a Model.')\n",
-    "    best_acc = 0.\n",
-    "    checkpoint_dir = os.path.join('./cifar10', 'train', 'weights')\n",
-    "    if not os.path.exists(checkpoint_dir):\n",
-    "        os.makedirs(checkpoint_dir)\n",
-    "    \n",
-    "    for epoch in tqdm(range(num_epochs)):\n",
-    "            \n",
-    "        train_epoch(models, criterion, optimizers, dataloaders, epoch, epoch_loss)\n",
-    "        schedulers['backbone'].step()\n",
-    "        schedulers['module'].step()\n",
-    "\n",
-    "        # Save a checkpoint\n",
-    "        if False and epoch % 5 == 4:\n",
-    "            acc = test(models, dataloaders, 'test')\n",
-    "            if best_acc < acc:\n",
-    "                best_acc = acc\n",
-    "                torch.save({\n",
-    "                    'epoch': epoch + 1,\n",
-    "                    'state_dict_backbone': models['backbone'].state_dict(),\n",
-    "                    'state_dict_module': models['module'].state_dict()\n",
-    "                },\n",
-    "                '%s/active_resnet18_cifar10.pth' % (checkpoint_dir))\n",
-    "            print('Val Acc: {:.3f} \\t Best Acc: {:.3f}'.format(acc, best_acc))\n",
-    "    print('>> Finished.')\n",
-    "\n",
-    "#\n",
-    "def get_uncertainty(models, unlabeled_loader):\n",
-    "    models['backbone'].eval()\n",
-    "    models['module'].eval()\n",
-    "    uncertainty = torch.tensor([]).to(device)\n",
-    "\n",
-    "    with torch.no_grad():\n",
-    "        for (inputs, labels) in unlabeled_loader:\n",
-    "            inputs = inputs.to(device)\n",
-    "            # labels = labels.to(device)\n",
-    "\n",
-    "            scores, features = models['backbone'](inputs)\n",
-    "            pred_loss = models['module'](features) # pred_loss = criterion(scores, labels) # ground truth loss\n",
-    "            pred_loss = pred_loss.view(pred_loss.size(0))\n",
-    "\n",
-    "            uncertainty = torch.cat((uncertainty, pred_loss), 0)\n",
-    "    \n",
-    "    return uncertainty.cpu()\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> Train a Model.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
    "source": [
     "train_loader = DataLoader(train_data, batch_size=BATCH, \n",
     "                                  num_workers = 4, pin_memory=True,  drop_last = True)\n",
@@ -192,18 +222,25 @@
     "\n",
     "dataloaders  = {'train': train_loader, 'test': test_loader}\n",
     "\n",
-    "print(len(dataloaders['train']))\n",
-    "# Model\n",
+    "res101 = models.resnet50(weights=None)\n",
+    "extractor = create_feature_extractor(\n",
+    "    res101,\n",
+    "    return_nodes=[\n",
+    "        \"layer1\",\n",
+    "        \"layer2\",\n",
+    "        \"layer3\",\n",
+    "        \"layer4\",\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "# resnet18    = timm.create_model('resnet50', num_classes = 4).to(device)\n",
-    "model1 = timm.create_model('resnet50', num_classes = 4, pretrained=True, features_only = True, out_indices = (1,2,3,4)).to(device)\n",
-    "model2 = timm.create_model('resnet50', num_classes = 4, pretrained=True).to(device)\n",
+    "# features = extractor(img)   \n",
+    "# print(len(features))\n",
     "\n",
     "# print(f\"resnet summary : {summary_(resnet18, (3, 32, 32))}\")\n",
     "\n",
     "# resnet18 = timm.create_model(\"resnet50\", num_classes = 4, pretrained=True).to(device)\n",
     "loss_module = lossnet.LossNet().to(device)\n",
-    "models      = {'backbone': [model1,model2] , 'module': loss_module}\n",
+    "models      = {'backbone': res101 , 'module': loss_module}\n",
     "\n",
     "torch.backends.cudnn.benchmark = False\n",
     "\n",
@@ -222,15 +259,13 @@
     "    schedulers = {'backbone': sched_backbone, 'module': sched_module}\n",
     "\n",
     "    # Training and test\n",
-    "    train(models, criterion, optimizers, schedulers, dataloaders, EPOCH, EPOCHL)\n",
-    "    metrics = test(models, dataloaders, mode='test')"
+    "    train(models, extractor, criterion, optimizers, schedulers, dataloaders, EPOCH, EPOCHL)\n",
+    "    metrics = test(models, extractor, dataloaders, mode='test')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -245,7 +280,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "exit()"
+   ]
   },
   {
    "cell_type": "code",
@@ -387,7 +424,43 @@
    "outputs": [],
    "source": [
     "model2 = timm.create_model('resnet50', num_classes = 4, pretrained=True)\n",
-    "model2.forward_features(img)"
+    "model2.forward_features(img).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(model1(img)[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torchvision.models import resnet50\n",
+    "from torchvision.models.feature_extraction import get_graph_node_names\n",
+    "from torchvision.models.feature_extraction import create_feature_extractor\n",
+    "\n",
+    "res101 = models.resnet50(pretrained=True)\n",
+    "\n",
+    "extractor = create_feature_extractor(\n",
+    "    res101,\n",
+    "    return_nodes=[\n",
+    "        \"layer1\",\n",
+    "        \"layer2\",\n",
+    "        \"layer3\",\n",
+    "        \"layer4\",\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "features = extractor(img)   \n",
+    "print(len(features))"
    ]
   },
   {
@@ -414,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
