--- a/lloss/test.ipynb
+++ b/lloss/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "print(device)\n",
+    "\n",
+    "print(\"쿠다 가능 :{}\".format(torch.cuda.is_available()))\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +97,7 @@
     "    with torch.no_grad():\n",
     "        for (inputs, labels) in unlabeled_loader:\n",
     "            inputs = inputs.to(device)\n",
-    "            # labels = labels.to(device)\n",
+    "            labels = labels.to(device)\n",
     "\n",
     "            scores = models['backbone'](inputs)\n",
     "            \n",
@@ -102,9 +119,11 @@
     "    \n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for (inputs, label) in dataloaders[mode]:\n",
-    "            inputs = inputs.to(device)\n",
-    "            label = label.to(device)\n",
+    "        for data in dataloaders[mode]:\n",
+    "            inputs = data[0].to(device)\n",
+    "            label = data[1].to(device)\n",
+    "            # inputs = inputs.to(device)\n",
+    "            # label = label.to(device)\n",
     "\n",
     "            scores, _ = models['backbone'](inputs)\n",
     "            # _, preds = torch.max(scores.data, 1)\n",
@@ -136,18 +155,6 @@
     "        schedulers['backbone'].step()\n",
     "        schedulers['module'].step()\n",
     "\n",
-    "        # Save a checkpoint\n",
-    "        if False and epoch % 5 == 4:\n",
-    "            acc = test(models, dataloaders, 'test')\n",
-    "            if best_acc < acc:\n",
-    "                best_acc = acc\n",
-    "                torch.save({\n",
-    "                    'epoch': epoch + 1,\n",
-    "                    'state_dict_backbone': models['backbone'].state_dict(),\n",
-    "                    'state_dict_module': models['module'].state_dict()\n",
-    "                },\n",
-    "                '%s/active_resnet18_cifar10.pth' % (checkpoint_dir))\n",
-    "            print('Val Acc: {:.3f} \\t Best Acc: {:.3f}'.format(acc, best_acc))\n",
     "    print('>> Finished.')\n",
     "    \n",
     "def train_epoch(models, extractor, criterion, optimizers, dataloaders, epoch, epoch_loss):\n",
@@ -197,32 +204,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">> Train a Model.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/1 [00:00<?, ?it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from torchvision.models import resnet50\n",
+    "\n",
     "train_loader = DataLoader(train_data, batch_size=BATCH, \n",
     "                                  num_workers = 4, pin_memory=True,  drop_last = True)\n",
     "test_loader  = DataLoader(test_data,num_workers = 4, batch_size=1)\n",
     "\n",
     "dataloaders  = {'train': train_loader, 'test': test_loader}\n",
     "\n",
-    "res101 = models.resnet50(weights=None)\n",
+    "res101 = resnet50(weights=None).to(device)\n",
     "extractor = create_feature_extractor(\n",
     "    res101,\n",
     "    return_nodes=[\n",
@@ -473,7 +467,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -492,7 +486,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "39523b5506b09c1341afcde84115bb5b8a9de94ca361b7e653f8ee467cc4d43c"
+    "hash": "7a45de5f3dafc9f958149dbb5720a94187329daf1dd827c7082dc91de8ec11a4"
    }
   }
  },
