--- a/lloss/test.ipynb
+++ b/lloss/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,12 +102,12 @@
     "    \n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for (inputs, label) in dataloaders[mode]:\n",
+    "        for (inputs, label,img_path) in dataloaders[mode]:\n",
     "            inputs = inputs.to(device)\n",
     "            label = label.to(device)\n",
     "\n",
-    "            scores, _ = models['backbone'](inputs)\n",
-    "            # _, preds = torch.max(scores.data, 1)\n",
+    "            scores = models['backbone'](inputs)\n",
+    "            \n",
     "            labels.extend(label.detach().tolist())\n",
     "            preds.extend(scores.argmax(axis=1).detach().tolist())\n",
     "        print(f\" labels = {labels}\")\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,8 +260,27 @@
     "\n",
     "    # Training and test\n",
     "    train(models, extractor, criterion, optimizers, schedulers, dataloaders, EPOCH, EPOCHL)\n",
-    "    metrics = test(models, extractor, dataloaders, mode='test')"
+    "    metrics = test(models, extractor, dataloaders, mode='test')\n",
+    "    \n",
+    "    print(f\"accuracy : {metrics['accuracy']:.4f}\")\n",
+    "    print(f\"f1 score : {metrics['f1_score']:.4f}\")\n",
+    "    print(f\"precision : {metrics['precision']:.4f}\")\n",
+    "    print(f\"recall : {metrics['recall']:.4f}\")\n",
+    "    \n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
