--- a/lloss_vision/test.ipynb
+++ b/lloss_vision/test.ipynb
@@ -174,6 +174,8 @@
     "    for data in tqdm(dataloaders['train'], leave=False, total=len(dataloaders['train'])):\n",
     "        inputs = data[0].to(device)\n",
     "        labels = data[1].to(device)\n",
+    "        img_name = data[2]\n",
+    "        \n",
     "        iters += 1\n",
     "\n",
     "        optimizers['backbone'].zero_grad()\n",
@@ -579,7 +581,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7a45de5f3dafc9f958149dbb5720a94187329daf1dd827c7082dc91de8ec11a4"
+    "hash": "39523b5506b09c1341afcde84115bb5b8a9de94ca361b7e653f8ee467cc4d43c"
    }
   }
  },
